2.增加openai